force-app/main/default/objects/Studentmarks__c/fields/Studentmaster__c.field-meta.xml
<CustomField>
    <fullName>Studentmaster__c</fullName>
    <label>Studentmaster</label>
    <referenceTo>Studentmaster__c</referenceTo>
    <relationshipLabel>Studentmarks</relationshipLabel>
    <relationshipName>Studentmarks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>