force-app/main/default/objects/Studentmarks__c/fields/UniqueIDCombo__c.field-meta.xml
<CustomField>
    <fullName>UniqueIDCombo__c</fullName>
    <label>UniqueIDCombo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>