force-app/main/default/objects/Studentmarks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Marks__c</columns>
    <columns>Studentmaster__c</columns>
    <columns>Subjects__c</columns>
    <columns>UniqueIDCombo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>